--- a/wwj-toolkit/src/main/java/test/TestFrame.form
+++ b/wwj-toolkit/src/main/java/test/TestFrame.form
@@ -534,6 +534,7 @@
                                               </Group>
                                           </Group>
                                           <Component id="bPolyHole" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Component id="bMultipolyHole" alignment="0" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -589,6 +590,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="chAnnoSlayer2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
+                              <Component id="bMultipolyHole" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -762,6 +764,14 @@
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bPolyHoleActionPerformed"/>
+                      </Events>
+                    </Component>
+                    <Component class="javax.swing.JButton" name="bMultipolyHole">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Create multipoly with holes"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bMultipolyHoleActionPerformed"/>
                       </Events>
                     </Component>
                   </SubComponents>
