hcc-nb: initial work on TimeWindowPanel for Day/Night layer

--- a/hcc-nb/src/main/java/gui/panels/TimeWindowPanel.form
+++ b/hcc-nb/src/main/java/gui/panels/TimeWindowPanel.form
@@ -27,13 +27,17 @@
                       <EmptySpace min="22" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="cbOper" max="32767" attributes="0"/>
-                          <Group type="102" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="1" attributes="0">
                                   <Component id="lT2" min="-2" max="-2" attributes="0"/>
                                   <Component id="lT1" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="102" attributes="0">
+                                      <Component id="chDayNight" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  </Group>
                                   <Group type="102" attributes="0">
                                       <Component id="jdcT1" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" max="-2" attributes="0"/>
@@ -66,7 +70,9 @@
                   <Component id="lT1" min="-2" max="-2" attributes="0"/>
                   <Component id="spT1Time" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <Component id="chDayNight" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lT2" min="-2" max="-2" attributes="0"/>
                   <Component id="jdcT2" min="-2" max="-2" attributes="0"/>
@@ -155,6 +161,15 @@
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="JSpinner.DateEditor timeEditor2 = new JSpinner.DateEditor(spT2Time, &quot;HH:mm:ss&quot;);&#xa;spT2Time.setEditor(timeEditor2);"/>
       </AuxValues>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="chDayNight">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Show day/night on t1"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="chDayNightItemStateChanged"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
